se actualiza el index

--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
 
       <h3>Manual Completo</h3>
       <ul>
-        <li><a href="Manual_Odoo16_Ecuador_Completo.html">Manual Odoo 16 Ecuador Completo</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Completo.md">Manual Odoo 16 Ecuador Completo</a></li>
       </ul>
 
       <h3>Manuales por Secciones</h3>
       <ul>
-        <li><a href="Manual_Odoo16_Ecuador_Parte1.html">Manual Odoo 16 Ecuador - Parte 1</a></li>
-        <li><a href="Manual_Odoo16_Ecuador_Parte2.html">Manual Odoo 16 Ecuador - Parte 2</a></li>
-        <li><a href="Manual_Odoo16_Ecuador_Parte3.html">Manual Odoo 16 Ecuador - Parte 3</a></li>
-        <li><a href="Manual_Odoo16_Ecuador_Parte4.html">Manual Odoo 16 Ecuador - Parte 4</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Parte1.md">Manual Odoo 16 Ecuador - Parte 1</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Parte2.md">Manual Odoo 16 Ecuador - Parte 2</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Parte3.md">Manual Odoo 16 Ecuador - Parte 3</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Parte4.md">Manual Odoo 16 Ecuador - Parte 4</a></li>
       </ul>
 
       <h3>Manuales Técnicos</h3>
       <ul>
-        <li><a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico - Parte 1</a></li>
-        <li><a href="Manual_Odoo16_Ecuador_Tecnico_Parte2.html">Manual Técnico - Parte 2</a></li>
-        <li><a href="Manual_Tecnico_Facturacion_Parte1.html">Manual Técnico de Facturación - Parte 1</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.md">Manual Técnico - Parte 1</a></li>
+        <li><a href="Manual_Odoo16_Ecuador_Tecnico_Parte2.md">Manual Técnico - Parte 2</a></li>
+        <li><a href="Manual_Tecnico_Facturacion_Parte1.md">Manual Técnico de Facturación - Parte 1</a></li>
       </ul>
 
       <h3>Extensiones</h3>
       <ul>
-        <li><a href="Extension_RRHH_Parte1.html">Extensión RRHH - Parte 1</a></li>
-        <li><a href="Extension_RRHH_Parte2.html">Extensión RRHH - Parte 2</a></li>
-        <li><a href="Extension_Cajas_Reportes.html">Extensión Cajas y Reportes</a></li>
-        <li><a href="Extension_Procesos_SRI.html">Extensión Procesos SRI</a></li>
-        <li><a href="Extension_Reportes_Adicionales.html">Extensión Reportes Adicionales</a></li>
+        <li><a href="Extension_RRHH_Parte1.md">Extensión RRHH - Parte 1</a></li>
+        <li><a href="Extension_RRHH_Parte2.md">Extensión RRHH - Parte 2</a></li>
+        <li><a href="Extension_Cajas_Reportes.md">Extensión Cajas y Reportes</a></li>
+        <li><a href="Extension_Procesos_SRI.md">Extensión Procesos SRI</a></li>
+        <li><a href="Extension_Reportes_Adicionales.md">Extensión Reportes Adicionales</a></li>
       </ul>
     </div>
   </div>
