Mejorada la configuración para visualizar archivos Markdown como páginas web

--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Manuales Odoo 16 Ecuador</h1>
-    <p>Documentación y manuales para Odoo 16 en Ecuador</p>
+  <header class="page-header">
+    <div class="container">
+      <h1 class="project-name">Manuales Odoo 16 Ecuador</h1>
+      <p class="project-tagline">Documentación y manuales para Odoo 16 en Ecuador</p>
+      <a href="index.html" class="btn">Inicio</a>
+      <a href="Manual_Odoo16_Ecuador_Completo.md" class="btn">Manual Completo</a>
+      <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.md" class="btn">Manual Técnico</a>
+    </div>
   </header>
 
   <div class="container">
