Simplificada la navegación para mostrar solo manuales principales y módulos específicos

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <div class="main-content-nav">
       <a href="index.html">Inicio</a>
       <a href="Manual_Odoo16_Ecuador_Completo.html">Manual Completo</a>
-      <a href="Manual_Odoo16_Ecuador_Parte1.html">Parte 1</a>
-      <a href="Manual_Odoo16_Ecuador_Parte2.html">Parte 2</a>
-      <a href="Manual_Odoo16_Ecuador_Parte3.html">Parte 3</a>
-      <a href="Manual_Odoo16_Ecuador_Parte4.html">Parte 4</a>
+      <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico</a>
+      <a href="Extension_RRHH_Parte1.html">Recursos Humanos</a>
+      <a href="Extension_Procesos_SRI.html">Procesos SRI</a>
+      <a href="Extension_Cajas_Reportes.html">Cajas y Reportes</a>
     </div>
 
     <div class="markdown-body">
@@ -113,31 +113,17 @@
 title: Manuales Odoo 16 Ecuador</h2>
 <h1>Manuales Odoo 16 Ecuador</h1>
 <p>Bienvenido a la documentación de Odoo 16 para Ecuador. Aquí encontrarás manuales completos sobre la implementación y uso de Odoo 16 adaptado para Ecuador.</p>
-<h2>Manuales Disponibles</h2>
-<h3>Manual Completo</h3>
+<h2>Manuales Principales</h2>
 <ul>
-<li><a href="./Manual_Odoo16_Ecuador_Completo.html">Manual Odoo 16 Ecuador Completo</a></li>
+<li><a href="./Manual_Odoo16_Ecuador_Completo.html">Manual Completo de Odoo 16 Ecuador</a> - Guía completa de usuario para Odoo 16 adaptado a la legislación ecuatoriana</li>
+<li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico</a> - Documentación técnica para desarrolladores y administradores del sistema</li>
 </ul>
-<h3>Manuales por Secciones</h3>
+<h2>Módulos Específicos</h2>
 <ul>
-<li><a href="./Manual_Odoo16_Ecuador_Parte1.html">Manual Odoo 16 Ecuador - Parte 1</a></li>
-<li><a href="./Manual_Odoo16_Ecuador_Parte2.html">Manual Odoo 16 Ecuador - Parte 2</a></li>
-<li><a href="./Manual_Odoo16_Ecuador_Parte3.html">Manual Odoo 16 Ecuador - Parte 3</a></li>
-<li><a href="./Manual_Odoo16_Ecuador_Parte4.html">Manual Odoo 16 Ecuador - Parte 4</a></li>
-</ul>
-<h3>Manuales Técnicos</h3>
-<ul>
-<li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico - Parte 1</a></li>
-<li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte2.html">Manual Técnico - Parte 2</a></li>
-<li><a href="./Manual_Tecnico_Facturacion_Parte1.html">Manual Técnico de Facturación - Parte 1</a></li>
-</ul>
-<h3>Extensiones</h3>
-<ul>
-<li><a href="./Extension_RRHH_Parte1.html">Extensión RRHH - Parte 1</a></li>
-<li><a href="./Extension_RRHH_Parte2.html">Extensión RRHH - Parte 2</a></li>
-<li><a href="./Extension_Cajas_Reportes.html">Extensión Cajas y Reportes</a></li>
-<li><a href="./Extension_Procesos_SRI.html">Extensión Procesos SRI</a></li>
-<li><a href="./Extension_Reportes_Adicionales.html">Extensión Reportes Adicionales</a></li>
+<li><a href="./Extension_RRHH_Parte1.html">Recursos Humanos</a> - Gestión de personal, nómina y procesos de RRHH</li>
+<li><a href="./Extension_Procesos_SRI.html">Procesos SRI</a> - Integración con el Servicio de Rentas Internas de Ecuador</li>
+<li><a href="./Extension_Cajas_Reportes.html">Cajas y Reportes</a> - Gestión de cajas y generación de reportes financieros</li>
+<li><a href="./Extension_Reportes_Adicionales.html">Reportes Adicionales</a> - Reportes complementarios para análisis de datos</li>
 </ul>
 
     </div>
