--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <a href="index.html" class="btn">Inicio</a>
     <a href="Manual_Odoo16_Ecuador_Completo.html" class="btn">Manual Completo</a>
     <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html" class="btn">Manual Técnico</a>
+    <a href="Manual_Tecnico_Facturacion_Parte1.html" class="btn">Facturación</a>
   </header>
 
   <div class="main-content">
@@ -102,9 +103,8 @@
       <a href="index.html">Inicio</a>
       <a href="Manual_Odoo16_Ecuador_Completo.html">Manual Completo</a>
       <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico</a>
-      <a href="Extension_RRHH_Parte1.html">Recursos Humanos</a>
-      <a href="Extension_Procesos_SRI.html">Procesos SRI</a>
-      <a href="Extension_Cajas_Reportes.html">Cajas y Reportes</a>
+      <a href="Manual_Odoo16_Ecuador_Tecnico_Parte2.html">Manual Técnico Parte 2</a>
+      <a href="Manual_Tecnico_Facturacion_Parte1.html">Facturación</a>
     </div>
 
     <div class="markdown-body">
@@ -118,12 +118,11 @@ title: Manuales Odoo 16 Ecuador</h2>
 <li><a href="./Manual_Odoo16_Ecuador_Completo.html">Manual Completo de Odoo 16 Ecuador</a> - Guía completa de usuario para Odoo 16 adaptado a la legislación ecuatoriana</li>
 <li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico</a> - Documentación técnica para desarrolladores y administradores del sistema</li>
 </ul>
-<h2>Módulos Específicos</h2>
+<h2>Documentación Técnica</h2>
 <ul>
-<li><a href="./Extension_RRHH_Parte1.html">Recursos Humanos</a> - Gestión de personal, nómina y procesos de RRHH</li>
-<li><a href="./Extension_Procesos_SRI.html">Procesos SRI</a> - Integración con el Servicio de Rentas Internas de Ecuador</li>
-<li><a href="./Extension_Cajas_Reportes.html">Cajas y Reportes</a> - Gestión de cajas y generación de reportes financieros</li>
-<li><a href="./Extension_Reportes_Adicionales.html">Reportes Adicionales</a> - Reportes complementarios para análisis de datos</li>
+<li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico - Parte 1</a> - Documentación técnica para desarrolladores y administradores del sistema</li>
+<li><a href="./Manual_Odoo16_Ecuador_Tecnico_Parte2.html">Manual Técnico - Parte 2</a> - Configuraciones avanzadas y personalizaciones</li>
+<li><a href="./Manual_Tecnico_Facturacion_Parte1.html">Manual de Facturación</a> - Guía técnica para el módulo de facturación electrónica</li>
 </ul>
 
     </div>
