--- a/Manual_Odoo16_Ecuador_Tecnico_Parte2.html
+++ b/Manual_Odoo16_Ecuador_Tecnico_Parte2.html
@@ -95,6 +95,7 @@
     <a href="index.html" class="btn">Inicio</a>
     <a href="Manual_Odoo16_Ecuador_Completo.html" class="btn">Manual Completo</a>
     <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html" class="btn">Manual Técnico</a>
+    <a href="Manual_Tecnico_Facturacion_Parte1.html" class="btn">Facturación</a>
   </header>
 
   <div class="main-content">
@@ -102,9 +103,8 @@
       <a href="index.html">Inicio</a>
       <a href="Manual_Odoo16_Ecuador_Completo.html">Manual Completo</a>
       <a href="Manual_Odoo16_Ecuador_Tecnico_Parte1.html">Manual Técnico</a>
-      <a href="Extension_RRHH_Parte1.html">Recursos Humanos</a>
-      <a href="Extension_Procesos_SRI.html">Procesos SRI</a>
-      <a href="Extension_Cajas_Reportes.html">Cajas y Reportes</a>
+      <a href="Manual_Odoo16_Ecuador_Tecnico_Parte2.html">Manual Técnico Parte 2</a>
+      <a href="Manual_Tecnico_Facturacion_Parte1.html">Facturación</a>
     </div>
 
     <div class="markdown-body">
